crates/cli/tests/snapshots/unsorted_pattern_params__fix_09abc540a4d00bd7455fce0542c6e562468e21ba2002b5aba5390808004fd1f1.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ pkgs, config, lib, ... } @ args: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ pkgs, config, lib, ... } @ args: config)
+({ config, lib, pkgs, ... }: config)
