crates/cli/tests/snapshots/unsorted_pattern_params__fix_10f514a7672e43ed60cd45005974351164e12b1b09910cd2d64c1bfa5e02f474.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, ... }: config)\""
---

