crates/cli/tests/snapshots/unsorted_pattern_params__fix_2cd762a29e24c70ff268bc1b9ee2868b1747a2d9d47441ef23c7b0045c2bc4b8.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, lib, pkgs, zebra, alpha, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ config, lib, pkgs, zebra, alpha, ... }: config)
+({ config, lib, pkgs, alpha, zebra, ... }: config)
