crates/cli/tests/snapshots/unsorted_pattern_params__fix_4405b86e56f9f80289471b3e6cfc4071947ede1af7c7845e23b9aa298d1d0d3e.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"(args @ { pkgs, config, lib, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-(args @ { pkgs, config, lib, ... }: config)
+({ config, lib, pkgs, ... }: config)
