crates/cli/tests/snapshots/unsorted_pattern_params__fix_5aaeefce3c4fba4910c107a5bc576ca2e5c0167b844555bd8f6794c054ca97d1.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, pkgs ? null, lib, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ config, pkgs ? null, lib, ... }: config)
+({ config, lib, pkgs ? null, ... }: config)
