crates/cli/tests/snapshots/unsorted_pattern_params__fix_79883ac7dde3395abddaea7209bdad96e15a810664caf5b9de5582d3ab2d3360.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ pkgs, config, lib, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ pkgs, config, lib, ... }: config)
+({ config, lib, pkgs, ... }: config)
