crates/cli/tests/snapshots/unsorted_pattern_params__fix_b81c0202c651c262c3f828b7c8a1ad412b5075e56e71aabb4bf6edfe364dac64.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ lib, config, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ lib, config, ... }: config)
+({ config, lib, ... }: config)
