crates/cli/tests/snapshots/unsorted_pattern_params__fix_c0d07cef8ecc7038f6c8d48e21a6edd8693f1d6feb99c46df36e5e6e57446ed5.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ config, pkgs, lib, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ config, pkgs, lib, ... }: config)
+({ config, lib, pkgs, ... }: config)
