crates/cli/tests/snapshots/unsorted_pattern_params__fix_c46914adf4fe1c871520e3068cd97db30f225dc5f53303b4864b1d443dadf792.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ pkgs, config, lib, ... } @ args: args.foo)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ pkgs, config, lib, ... } @ args: args.foo)
+({ config, lib, pkgs, ... } @ args: args.foo)
