crates/cli/tests/snapshots/unsorted_pattern_params__fix_d126fd36c3561a6c02bd6635634d026132ac432cf96054241af194564f2d211a.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ ... }: 42)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ ... }: 42)
+(_: 42)
