crates/cli/tests/snapshots/unsorted_pattern_params__fix_d49a9035c7cd187d7a9da33f8c80a9603ade665762b1bdddf575d826fa9be1cf.snap
---
source: crates/cli/tests/unsorted_pattern_params.rs
assertion_line: 5
expression: "\"({ pkgs, lib, config, flakeInputs, ... }: config)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ pkgs, lib, config, flakeInputs, ... }: config)
+({ config, lib, pkgs, flakeInputs, ... }: config)
